# fold

./: .dockerignore  .gdbinit  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  code.typ  docker-compose.yaml  justfile  musl.patch  patch-musl.sh  report.typ  x86_64-unknown-linux-none.json
examples/: Cargo.toml  justfile
examples/trampoline-linker/: Cargo.toml
examples/trampoline-linker/macros/: Cargo.toml
examples/trampoline-linker/macros/src/: lib.rs
examples/trampoline-linker/src/: installer.rs  main.rs
examples/trampoline-linker/tramp-macros/: Cargo.toml
examples/trampoline-linker/tramp-macros/src/: lib.rs
fold/: Cargo.toml  x86_64-unknown-linux-none.json
fold/macros/: Cargo.toml
fold/macros/src/: lib.rs
fold/src/: allocator.rs  arena.rs  cli.rs  driver.rs  elf.rs  env.rs  error.rs  exit.rs  file.rs  filters.rs  lib.rs  logging.rs  main.rs  manifold.rs  module.rs  musl.rs  share_map.rs
fold/src/object/: mod.rs  section.rs  segment.rs
fold/src/sysv/: collector.rs  error.rs  loader.rs  mod.rs  protect.rs  relocation.rs  start.rs
fold/src/sysv/tls/: allocation.rs  collection.rs  mod.rs  relocation.rs
report/: code.typ  report.bib  report.typ
reports/: render.sh
reports/tls/: notes.md  (+4 more)
samples/: .gitignore  Makefile  count-ext.c  count-ext.h  count-pic.c  count-pic.h  count.c  count.h  hello-bss.c  hello-dl.asm  hello-env.c  hello-init-array  hello-init-array.asm  hello-math.c  hello-riscv.s  hello-threaded-ext.c  hello-threaded-pic.c  hello-threaded.c  hello.c  hello_c  justfile  msg.asm  seccomp-allowed.c  seccomp-forbidden.c
sqlite-build/: .gitignore  justfile
src/: allocator.rs  arena.rs  bytes.rs  cli.rs  driver.rs  elf.rs  env.rs  error.rs  file.rs  filters.rs  lib.rs  logging.rs  main.rs  manifold.rs  module.rs  object.rs
(+25 files in other folders)
