[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = ["fold", "tests"]
resolver = "3"

[workspace.dependencies]
log       = "0.4.19"
hashbrown = "0.14.0"
plain     = "0.2"
rustix    = { version = "0.38.3", default-features = false, features = ["stdio", "mm", "runtime", "fs"] }
