[lib]
test = false
bench = false

[package]
name = "fold"
version = "0.1.0"
edition = "2021"

[dependencies]
log       = { workspace = true }
hashbrown = { workspace = true }
plain     = { workspace = true }
rustix    = { workspace = true }
goblin    = { version = "0.7.1", default-features = false, features = ["elf64"] }
linked_list_allocator = "0.10.5"
static_assertions = "1.1.0"